--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.0",
+    "@angular/animations": "^11.2.1",
     "@angular/common": "~11.2.0",
     "@angular/compiler": "~11.2.0",
-    "@angular/core": "~11.2.0",
-    "@angular/forms": "~11.2.0",
+    "@angular/core": "^11.2.1",
+    "@angular/forms": "^11.2.1",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-toastr": "^13.2.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -27,6 +34,7 @@
     "@angular-devkit/build-angular": "~0.1102.0",
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
+    "@angular/localize": "^11.2.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
